[tool.poetry]
name = "rhvhauto-common-utils"
version = "0.1.5"
description = "common utils for rhvh auto project"
authors = ["dracher <dracher@gmail.com>"]
readme = 'README.md'
repository = "https://github.com/RHVH-QE/rhvhauto_common_utils"

[tool.poetry.dependencies]
python = "^3.7"
ovirt-engine-sdk-python="^4.4.1"
tomlkit = "^0.5.11"
mako = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
